# 1724project

./: .gitignore  README.md
candle-chat-backend/: Cargo.toml  Readme.md
candle-chat-backend/src/: main.rs
frontend/: Cargo.toml  index.html
frontend/src/: main.rs
server-llama2/: .gitignore  Cargo.toml  chat.db  download_tinyllama.py
server-llama2/src/: db.rs  main.rs
server-qwen/: Cargo.toml  Readme.md  chat.db  download_qwen_instruct.py
server-qwen/src/: db.rs  main.rs
