[package]
name = "tinyllama-chat"
version = "0.1.0"
edition = "2021"

[dependencies]
yew = { version = "0.21", features = ["csr"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
web-sys = { version = "0.3", features = ["HtmlTextAreaElement", "HtmlInputElement", "HtmlSelectElement", "Event", "InputEvent", "KeyboardEvent", "SubmitEvent", "Window", "Document", "Element", "console"] }
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
uuid = { version = "1.0", features = ["v4", "js"] }
gloo-net = "0.5"
futures = "0.3"
urlencoding = "2"