[package]
name = "server-qwen"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"

# Web server (same style as your working server)
axum = { version = "0.7", features = ["macros"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }

serde = { version = "1", features = ["derive"] }
serde_json = "1"

# *** Match the working backend ***
candle-core = "0.9"
candle-nn = "0.9"
candle-transformers = "0.9"
tokenizers = "0.15"

# Streaming + CORS (same as working server)
tokio-stream = { version = "0.1", features = ["sync"] }
tower-http = { version = "0.5", features = ["cors"] }
